--- a/Project-1/EDA.ipynb
+++ b/Project-1/EDA.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1388,34 +1388,103 @@
        "      <td>Ming</td>\n",
        "      <td>Kelly was a great host and very accommodating ...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84844</th>\n",
+       "      <td>3624990</td>\n",
+       "      <td>50436321</td>\n",
+       "      <td>2015-10-12</td>\n",
+       "      <td>37419458</td>\n",
+       "      <td>Ryan</td>\n",
+       "      <td>The description and pictures of the apartment ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84845</th>\n",
+       "      <td>3624990</td>\n",
+       "      <td>51024875</td>\n",
+       "      <td>2015-10-17</td>\n",
+       "      <td>6933252</td>\n",
+       "      <td>Linda</td>\n",
+       "      <td>We had an excellent stay. It was clean and com...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84846</th>\n",
+       "      <td>3624990</td>\n",
+       "      <td>51511988</td>\n",
+       "      <td>2015-10-20</td>\n",
+       "      <td>19543701</td>\n",
+       "      <td>Jaime</td>\n",
+       "      <td>Gran ubicación, cerca de todo lo atractivo del...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84847</th>\n",
+       "      <td>3624990</td>\n",
+       "      <td>52814482</td>\n",
+       "      <td>2015-11-02</td>\n",
+       "      <td>24445024</td>\n",
+       "      <td>Jørgen</td>\n",
+       "      <td>Very good apartement, clean and well sized. Si...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84848</th>\n",
+       "      <td>9727246</td>\n",
+       "      <td>56429621</td>\n",
+       "      <td>2015-12-13</td>\n",
+       "      <td>30860360</td>\n",
+       "      <td>Stephanie</td>\n",
+       "      <td>Breanne was a great host. Check in was easy, s...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>84849 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   listing_id        id        date  reviewer_id reviewer_name  \\\n",
-       "0     7202016  38917982  2015-07-19     28943674        Bianca   \n",
-       "1     7202016  39087409  2015-07-20     32440555         Frank   \n",
-       "2     7202016  39820030  2015-07-26     37722850           Ian   \n",
-       "3     7202016  40813543  2015-08-02     33671805        George   \n",
-       "4     7202016  41986501  2015-08-10     34959538          Ming   \n",
+       "       listing_id        id        date  reviewer_id reviewer_name  \\\n",
+       "0         7202016  38917982  2015-07-19     28943674        Bianca   \n",
+       "1         7202016  39087409  2015-07-20     32440555         Frank   \n",
+       "2         7202016  39820030  2015-07-26     37722850           Ian   \n",
+       "3         7202016  40813543  2015-08-02     33671805        George   \n",
+       "4         7202016  41986501  2015-08-10     34959538          Ming   \n",
+       "...           ...       ...         ...          ...           ...   \n",
+       "84844     3624990  50436321  2015-10-12     37419458          Ryan   \n",
+       "84845     3624990  51024875  2015-10-17      6933252         Linda   \n",
+       "84846     3624990  51511988  2015-10-20     19543701         Jaime   \n",
+       "84847     3624990  52814482  2015-11-02     24445024        Jørgen   \n",
+       "84848     9727246  56429621  2015-12-13     30860360     Stephanie   \n",
        "\n",
-       "                                            comments  \n",
-       "0  Cute and cozy place. Perfect location to every...  \n",
-       "1  Kelly has a great room in a very central locat...  \n",
-       "2  Very spacious apartment, and in a great neighb...  \n",
-       "3  Close to Seattle Center and all it has to offe...  \n",
-       "4  Kelly was a great host and very accommodating ...  "
+       "                                                comments  \n",
+       "0      Cute and cozy place. Perfect location to every...  \n",
+       "1      Kelly has a great room in a very central locat...  \n",
+       "2      Very spacious apartment, and in a great neighb...  \n",
+       "3      Close to Seattle Center and all it has to offe...  \n",
+       "4      Kelly was a great host and very accommodating ...  \n",
+       "...                                                  ...  \n",
+       "84844  The description and pictures of the apartment ...  \n",
+       "84845  We had an excellent stay. It was clean and com...  \n",
+       "84846  Gran ubicación, cerca de todo lo atractivo del...  \n",
+       "84847  Very good apartement, clean and well sized. Si...  \n",
+       "84848  Breanne was a great host. Check in was easy, s...  \n",
+       "\n",
+       "[84849 rows x 6 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "review_df = pd.read_csv('./data/reviews.csv')\n",
-    "review_df.head()"
+    "review_df"
    ]
   },
   {
