--- a/Project-1/EDA.ipynb
+++ b/Project-1/EDA.ipynb
@@ -27,6 +27,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Business Understanding\n",
+    "The goal of this project is to analyze Airbnb data in Seattle, WA to gain insights into the city's rental market. By examining factors such as `price`, `neighborhood`, `property type`, and `review sentiment`, I aim to understand the dynamics of the Seattle Airbnb market by answer these key questions:\n",
+    "\n",
+    "-\tWhat kinds of properties are most common in Seattle, and which neighborhoods have the highest concentration of listings?\n",
+    "-\tWhat is the price distribution of Airbnb listings in Seattle, and what are typical prices?\n",
+    "-\tHow does room type affect pricing, and which room types are most common in Seattle?\n",
+    "-\tWhen is the best time to visit Seattle based on availability and review activity?\n",
+    "\n",
+    "I wanted the opportunity to explore the data and communicate my findings in an engaging way, providing insights into these key questions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Dataset understanding "
    ]
   },
@@ -790,16 +805,10 @@
    "source": [
     "# Transform money cols to float\n",
     "def remove_money_symbol(example):\n",
+    "    \"\"\"remove $ and , from money cols\"\"\"\n",
     "    example = str(example).replace(r\"$\",\"\").replace(\",\",\"\")\n",
-    "    return float(example)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return float(example)\n",
+    "\n",
     "for col in ['price', 'weekly_price', 'monthly_price', 'security_deposit', 'cleaning_fee', 'extra_people']:\n",
     "    listings_df[col] = listings_df[col].apply(remove_money_symbol)"
    ]
@@ -855,7 +864,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EDA"
+    "### EDA\n",
+    "\n",
+    "In this section, we will explore the dataset and answer the target questions that listed in the project description.\n",
+    "\n",
+    "Basic statistics:"
    ]
   },
   {
@@ -1021,13 +1034,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The estimated annual occupancy rate was around 32.94%, meaning that, on average, properties are available about two-thirds of the year."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Distribution of Property Types\n",
-    "sns.set_style(\"white\")  # Set the aesthetic style of the plots\n"
+    "sns.set_style(\"white\")  # Set the aesthetic style of the plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyzing data follow the question guide:"
    ]
   },
   {
@@ -1305,7 +1332,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reviewer feedback analysis"
+    "### Reviewer feedback analysis\n",
+    "\n",
+    "Analysis of the feedback from the reviewers in file `reviewers.csv`\n",
+    "\n",
+    "Intepret the feedback from the reviewers, we can analyze the feedback by season in a year via submitted date."
    ]
   },
   {
