--- a/Project-2/ETL Pipeline Preparation.ipynb
+++ b/Project-2/ETL Pipeline Preparation.ipynb
@@ -909,8 +909,8 @@
    ],
    "source": [
     "# create a dataframe of the 36 individual category columns\n",
-    "# categories = categories = df[\"categories\"].apply(lambda x: str(x).split(';'))\n",
-    "categories = categories = df[\"categories\"].str.split(';', expand=True)\n",
+    "# categories = df[\"categories\"].apply(lambda x: str(x).split(';'))\n",
+    "categories = df[\"categories\"].str.split(';', expand=True)\n",
     "categories"
    ]
   },
@@ -2328,7 +2328,7 @@
    ],
    "source": [
     "engine = create_engine('sqlite:///InsertDatabaseName.db')\n",
-    "df.to_sql('./data/InsertTableName', engine, index=False)"
+    "df.to_sql('InsertTableName', engine, index=False)"
    ]
   },
   {
