--- a/Project-2/ETL Pipeline Preparation.ipynb
+++ b/Project-2/ETL Pipeline Preparation.ipynb
@@ -2393,7 +2393,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dev",
    "language": "python",
    "name": "python3"
   },
