--- a/Project-3/Recommendations_with_IBM.ipynb
+++ b/Project-3/Recommendations_with_IBM.ipynb
@@ -1675,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1741,8 +1741,8 @@
     "    before choosing those with fewer total interactions. \n",
     "   \n",
     "    '''\n",
-    "    recs = {}\n",
     "    ### Previous submission\n",
+    "    # recs = {}\n",
     "    # rec_names = []\n",
     "    # neighbors_df = get_top_sorted_users(user_id)\n",
     "    # user_articles, _ = get_user_articles(user_id)\n",
@@ -1761,34 +1761,36 @@
     "    #     rec_names.append(rec_name)\n",
     "\n",
     "    ### New submission\n",
+    "    recs, rec_names = [], []\n",
+    "    \n",
     "    user_articles, _ = get_user_articles(user_id)\n",
     "    \n",
-    "    similar_users = pd.DataFrame({\n",
-    "        'neighbor_id': find_similar_users(user_id),\n",
-    "        'weight': np.linspace(1, 0.1, len(find_similar_users(user_id)))\n",
-    "    })\n",
+    "    # Get sorted neighbors\n",
+    "    neighbors_df = get_top_sorted_users(user_id)\n",
     "    \n",
-    "    for idx, row in similar_users.iterrows():\n",
-    "        neighbor_articles, _ = get_user_articles(row['neighbor_id'])\n",
+    "    article_interactions = df.groupby('article_id')['user_id'].count()\n",
+    "    for neighbor_id in neighbors_df['neighbor_id']:\n",
+    "        if len(recs) >= m:\n",
+    "            break\n",
+    "            \n",
+    "        neighbor_articles, _ = get_user_articles(neighbor_id)\n",
+    "        new_recs = [art for art in neighbor_articles if art not in user_articles]\n",
     "        \n",
-    "        for article in neighbor_articles:\n",
-    "            if article not in user_articles:\n",
-    "                if article in recs:\n",
-    "                    recs[article] += row['weight']\n",
-    "                else:\n",
-    "                    recs[article] = row['weight']\n",
-    "    \n",
-    "    sorted_recs = sorted(recs.items(), key=lambda x: x[1], reverse=True)\n",
-    "    \n",
-    "    recs = [str(article[0]) for article in sorted_recs[:m]]\n",
-    "    rec_names = [df[df.article_id == float(article)].iloc[0,1] for article in recs]\n",
+    "        new_recs_sorted = sorted(new_recs, \n",
+    "                               key=lambda x: article_interactions.get(float(x), 0),\n",
+    "                               reverse=True)\n",
+    "        \n",
+    "        for article in new_recs_sorted:\n",
+    "            if article not in recs and len(recs) < m:\n",
+    "                recs.append(str(article))\n",
+    "                rec_names.append(df[df.article_id == float(article)].iloc[0,1])\n",
     "    \n",
     "    return recs, rec_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -1796,10 +1798,10 @@
      "output_type": "stream",
      "text": [
       "The top 10 recommendations for user 20 are the following article ids:\n",
-      "['1330.0', '1429.0', '1364.0', '1314.0', '1271.0', '1398.0', '1431.0', '1351.0', '1160.0', '1336.0']\n",
+      "['1330.0', '1427.0', '1364.0', '1170.0', '1162.0', '1304.0', '1351.0', '1160.0', '1354.0', '1368.0']\n",
       "\n",
       "The top 10 recommendations for user 20 are the following article names:\n",
-      "['insights from new york car accident reports', 'use deep learning for image classification', 'predicting churn with the spss random tree algorithm', 'healthcare python streaming application demo', 'customer demographics and sales', 'total population by country', 'visualize car data with brunel', 'model bike sharing data with spss', 'analyze accident reports on amazon emr spark', 'learn basics about notebooks and apache spark']\n"
+      "['insights from new york car accident reports', 'use xgboost, scikit-learn & ibm watson machine learning apis', 'predicting churn with the spss random tree algorithm', 'apache spark lab, part 1: basic concepts', 'analyze energy consumption in buildings', 'gosales transactions for logistic regression model', 'model bike sharing data with spss', 'analyze accident reports on amazon emr spark', 'movie recommender system with spark machine learning', 'putting a human face on machine learning']\n"
      ]
     }
    ],
@@ -2910,7 +2912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
